MiniC/TP03/tests/students/syntax_errors/test_bad_syntax.c
#include "printlib.h"

int main()
{
    test = "test";
    return 0;
}

// EXPECTED
// EXITCODE 2
// In function main: Line 10 col 9: invalid type for additive operands: string and string